# monad-ops

./: .gitignore  Dockerfile  OBSERVATIONS.md  README.md  SECURITY.md  config.example.toml  docker-compose.yml  labels.json  pyproject.toml
monad_ops/: cli.py  config.py  labels.py  reorg_capture.py  replay_export.py  state.py  storage.py  waltrace_capture.py
monad_ops/alerts/: __init__.py  sink.py  telegram.py
monad_ops/api/: __init__.py  app.py
monad_ops/collector/: __init__.py  bft_journal.py  epoch_probe.py  journal.py  peer_stats.py  probes.py  process_restart.py  reference_rpc.py  validator_set.py  version.py
monad_ops/enricher/: __init__.py  receipts.py  worker.py
monad_ops/parser/: __init__.py  assertion.py  consensus.py  execution.py
monad_ops/rules/: __init__.py  assertion.py  block_processing_slowdown.py  events.py  reorg.py  (+7 more)
scripts/: backfill_bft_minute.py  install-systemd.sh  watchdog.env.example  watchdog.sh
systemd/: monad-ops-watchdog.service.example  monad-ops-watchdog.timer  monad-ops.service.example  nginx-monad-ops-internal.conf.example  nginx-ops-dashboard.conf.example
tests/: test_api_shapes.py  test_assertion_parser.py  test_bft_state.py  test_consensus_parser.py  test_enricher.py  test_epoch_progress.py  test_execution_parser.py  test_labels.py  test_peer_stats.py  test_process_restart_collector.py  test_reorg_capture.py  test_replay_export.py  test_rules.py  test_storage.py  test_stress_envelopes.py  test_tailer_resilience.py  test_telegram_sink.py  test_validator_set_collector.py  test_version_collector.py  test_version_rule.py  test_waltrace_capture.py
(+18 files in other folders)
